Sync changes with master repo, fix scrollbar issue| MS Edge Beta v1.0

--- a/jike-meow-firefox/style/index.css
+++ b/jike-meow-firefox/style/index.css
@@ -1,6 +1,3 @@
-::-webkit-scrollbar {
-  width: 0 !important;
-}
 * {
   margin: 0;
   padding: 0;
@@ -37,8 +34,9 @@ body {
 
 div#app {
   display: block;
-  width: 100%;
+  width: 350px;
   font-size: 0;
+  overflow: hidden;
 }
 
 /* 登录 */
@@ -96,13 +94,11 @@ div.qrcode-framer > p > b {
 div#notification {
   display: block;
   height: 400px;
-  width: 350px;
-  margin: auto;
+  width: 380px;
+  padding-right: 30px !important;
   overflow-x: hidden;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
-  -ms-overflow-style: none;
-  overflow: -moz-scrollbars-none;
 }
 
 p#notification-loading,
